글 수정, 삭제, 등록시 nickname값 뜨게 테이블 추가 및 컨트롤러,html수정 (1차 수정본)

--- a/Project_commu2/src/main/resources/templates/commu/commudelete.html
+++ b/Project_commu2/src/main/resources/templates/commu/commudelete.html
@@ -41,7 +41,7 @@
 			<tr>
 				<td>내용</td>
 				<td>
-				<textarea rows="5" style="width: 98%" readonly="readonly">[[${list.content}]]</textarea>
+				<textarea rows="5" style="width: 98%" readonly="readonly">[[${list.cont}]]</textarea>
 			</td>
 		</tr>
 			<tr>
