--- a/Project_commu2/src/main/resources/templates/commu/commu.html
+++ b/Project_commu2/src/main/resources/templates/commu/commu.html
@@ -43,13 +43,15 @@
   }
 </script>
 
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7d87d984c0f8ac3f56204cd35462db6e"></script>
 <body>
+
 <h3>커뮤니티</h3>
 <table>
   <tr>
   	<td>
   	[<a th:href="@{/commu}">최근목록</a>]&nbsp;  
-  	[<a th:href="@{/insertCommu}">글쓰기</a>]&nbsp;  <!-- 인스폼으로 바로 보내도 되지 않나-->
+  	[<a th:href="@{/insertCommu}">글쓰기</a>]&nbsp; 
   	[<a th:href="@{/anmt}">공지사항 </a>]&nbsp;
   	[<a th:href="@{/qlist}">문의게시판 </a>]
   	</td>
@@ -130,5 +132,58 @@
 	</tr>
 </table>
 
+<script src="../js/map.js"></script>
 </body>
+<footer>
+	<div id="map" style="width:80%;height:400px;"></div>
+	<script type="text/javascript">
+/* 카카오 map api - 02.07 */
+var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+    mapOption = { 
+        center: new kakao.maps.LatLng(37.49870172250289, 127.03157972960643), // 지도의 중심좌표
+        level: 3 // 지도의 확대 레벨
+    };
+    
+var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+//일반 지도와 스카이뷰로 지도 타입을 전환할 수 있는 지도타입 컨트롤을 생성합니다
+var mapTypeControl = new kakao.maps.MapTypeControl();
+
+// 지도에 컨트롤을 추가해야 지도위에 표시됩니다
+// kakao.maps.ControlPosition은 컨트롤이 표시될 위치를 정의하는데 TOPRIGHT는 오른쪽 위를 의미합니다
+map.addControl(mapTypeControl, kakao.maps.ControlPosition.TOPRIGHT);
+
+// 지도 확대 축소를 제어할 수 있는  줌 컨트롤을 생성합니다
+var zoomControl = new kakao.maps.ZoomControl();
+map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+
+var iwContent = '<div style="padding:5px; text-align:center;">에이콘~!</div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+    iwPosition = new kakao.maps.LatLng(37.4990, 127.03157972960643), //인포윈도우 표시 위치입니다
+    iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
+
+var markerPosition  = new kakao.maps.LatLng(37.49870172250289, 127.03157972960643); 
+
+// 마커를 생성합니다
+var marker = new kakao.maps.Marker({
+    position: markerPosition
+});
+
+// 마커가 지도 위에 표시되도록 설정합니다
+marker.setMap(map);
+
+// 인포윈도우를 생성하고 지도에 표시합니다
+var infowindow = new kakao.maps.InfoWindow({
+    map: map, // 인포윈도우가 표시될 지도
+    position : iwPosition, 
+    content : iwContent,
+    removable : iwRemoveable
+});
+      
+// 지도에서 제거
+// infowindow.close();        
+
+// 아래 코드는 지도 위의 마커를 제거하는 코드입니다
+// marker.setMap(null);
+</script>
+</footer>
 </html>
