- 문의게시판, 공지게시판에 이미지 추가할 수 있도록 구현, 그에따라 테이블 명 및 컨트롤러, datamapper수정, id아닌 name 뜨도록 구현 - 커뮤니티 글 검색시 id가 아닌 nickname으로 검색하도록 수정, ‘내 글 조회’ 아작스, 버튼, url형식으로 구현. 글 삭제시 ‘삭제하시겠습니까?’물어보고 id값 같을 때만 삭제 - 문의 게시판 - 닉네임으로 뜨게. 이미지 업로드 가능하게 구현, ‘내 문의 글 보기’ 기능 구현, 삭제버튼 클릭시 ‘삭제하시겠습니까?’ 물어보고 id값 같을 때만 삭제

--- a/Project_commu2/src/main/resources/templates/qinsform.html
+++ b/Project_commu2/src/main/resources/templates/qinsform.html
@@ -31,12 +31,12 @@
 
 <body>
 	** 글 쓰기 **
-	<p /><!-- 히든으로 현재 세션 id값 넘기기-->
-	<form action="qinsert" method="post" name="frm">
+	<p />
+	<form action="qinsert" method="post" name="frm" enctype="multipart/form-data">
 		<table style="width: 80%">
 			<tr>
-				<td>아이디</td>
-				<td><input type="hidden" name="id" value="NotNow">아이디 불러와서 넘기세요</td>
+				<td>작성자</td>
+				<td th:text="${nickname}"></td>
 			</tr>
 			<tr>
 				<td>제목</td>
@@ -47,8 +47,13 @@
 				<td><textarea rows="5" style="width: 99%" name="cont"></textarea></td>
 			</tr>
 			<tr>
+				<td>파일 업로드</td>
+				<td><input type="file" name="file"></td>
+			</tr>
+			<tr>
 				<td colspan="2" style="text-align: center;">
 					<input type="button" value="등록" id="btnIns" />
+					<button type="button" id="writeBtn" onclick="history.back();">취소</button>
 					<input type="button" value="목록" onclick="location.href='qnalist?page=1'" />
 				</td>
 			</tr>
