--- a/Project_commu2/src/main/resources/templates/qdetail.html
+++ b/Project_commu2/src/main/resources/templates/qdetail.html
@@ -4,6 +4,15 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="stylesheet" type="text/css" href="/css/post.css">
+<!-- 글 삭제 전 물어보기 -->
+	<script type="text/javascript">
+		function qdelete(num) {
+			if (confirm("정말 삭제하시겠습니까?")) {
+				// 페이지로 삭제 요청 보내기
+				window.location.href = "/qdelete?num=" + num;
+			}
+		}
+	</script>
 </head>
 <body>
 <h3>* 상세 보기 *</h3>
@@ -16,9 +25,7 @@
   		<a th:href="@{/qupdate(num=${data.num},page=${page})}">
   			수정하기
   		</a>
-  		<a th:href="@{/qdelete(num=${data.num},page=${page})}">
-  			삭제하기
-  		</a>
+  		<a href="#" th:onclick="'qdelete(' + ${data.num} + '); return false;'">삭제하기</a>
   		<a th:href="@{/qlist(page=${page})}">
   			목록보기
   		</a>
@@ -29,7 +36,7 @@
 <table>
   <tr>
   	<td>
-  		작성자 : [[${data.id}]]
+  		작성자 : [[${data.name}]]
   	</td>
   	<td>작성일 : [[${data.bdate}]]</td>
   	<td>조회수 : [[${data.readcnt}]]</td>
@@ -42,6 +49,15 @@
   		<textarea rows="5" style="width: 98%" readonly="readonly">[[${data.cont}]]</textarea>
   	</td>
   </tr>
+  <tr>
+			<td colspan="3">
+				<th:block th:if="${data.filename != null}">
+					<img th:src="@{upload/} + ${data.filename}" alt="이미지" width="300" height="300">
+				</th:block>
+				<th:block th:unless="${data.filename != null}">
+				</th:block>
+			</td>
+		</tr>
 </table>
 </body>
 </html>
