--- a/Project_commu2/src/main/resources/templates/qupdate.html
+++ b/Project_commu2/src/main/resources/templates/qupdate.html
@@ -37,8 +37,8 @@ function chkUpData(){
 	<input type="hidden" name="page" th:value="${page}">
 	<table border="1" style="width: 80%">
 		<tr>
-			<td>이름</td>
-			<td>세션아이디 불러와서 출력할 자리</td>
+			<td>작성자</td>
+			<td>[[${data.name}]]	</td>
 		</tr>
 		<tr>
 			<td>제목</td>
