--- a/Project_commu2/src/main/resources/templates/anmtInsert.html
+++ b/Project_commu2/src/main/resources/templates/anmtInsert.html
@@ -39,9 +39,12 @@
 	<form action="insertAnmt" method="post" name="frm" enctype="multipart/form-data">
 		<table style="width: 80%">
 			<tr>
-				<td>아이디</td>
-			<!--	<td th:text="${#httpSession.getAttribute('username')}"></td> -->
-			<td>아이디 들어올 자리</td>
+			<td>
+				<select name="eventnotice">
+					<option value="1" selected>공지</option>
+					<option value="2">이벤트</option>
+				</select>
+			</td>
 			</tr>
 			<tr>
 				<td>제목</td>
