--- a/Project_commu2/src/main/resources/templates/qlist.html
+++ b/Project_commu2/src/main/resources/templates/qlist.html
@@ -3,7 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link rel="stylesheet" th:href="@{/css/post.css}">
+ <link rel="stylesheet" href="css/board.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
 <h3>* 문의 게시판 *</h3>
@@ -37,19 +42,12 @@
 	</tr>
 	
 	<!-- paging -->
- 	<tr style="text-align: center;">
-		<td colspan="5">
-		<th:block th:each="num : ${#numbers.sequence(1, pagesu)}">
-			<th:span th:if="${num} == ${page}">
-				<b th:text=${num}>num 표시(현재 페이지는 링크를 걸지 않음)</b>
-			</th:span>
-			<th:span th:if="${num} != ${page}">
-				<a th:href="@{qlist(page=${num})}" th:text="${num}">num 표시</a>
-			</th:span>
-		</th:block>	
-		</td>
-	</tr>
-	</th:block>
+ 	 <div class="pagination">
+                <span th:block th:each="num : ${#numbers.sequence(1, pagesu)}">
+                    <span th:if="${num} == ${page}"><label th:for="${num}"><b th:text="${num}"></b></label></span>
+                    <span th:if="${num} != ${page}"><a th:href="@{anmt(page=${num})}" th:text="${num}"></a></span>
+                </span>
+            </div>
 
 	<!-- 검색 작업 추가 -->
 	<tr style="text-align: center;">
